--- a/daxpay-single-server/pom.xml
+++ b/daxpay-single-server/pom.xml
@@ -71,10 +71,13 @@
         </dependency>
 
         <!-- 数据库驱动 MySQL -->
-        <!--        <dependency>-->
-        <!--            <groupId>com.mysql</groupId>-->
-        <!--            <artifactId>mysql-connector-j</artifactId>-->
-        <!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.31</version>
+        </dependency>
+
 
         <!--文件存储 (minio方式)-->
         <dependency>
