--- a/daxpay-single-server/src/main/resources/application-dev.yml
+++ b/daxpay-single-server/src/main/resources/application-dev.yml
@@ -5,23 +5,23 @@ spring:
       datasource:
         master:
           # Postgresql连接
-          driver-class-name: org.postgresql.Driver
-          url: jdbc:postgresql://postgresql:5432/dax-pay-single?serverTimezone=Asia/Shanghai&autoReconnect=true&reWriteBatchedInserts=true
-          username: bootx
-          password: bootx123
-          # MySQL连接
-#          driver-class-name: com.mysql.cj.jdbc.Driver
-#          url: jdbc:mysql://mysql:3306/dax-pay-single?serverTimezone=GMT%2B8&characterEncoding=utf8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
-#          username: root
+#          driver-class-name: org.postgresql.Driver
+#          url: jdbc:postgresql://postgresql:5432/dax-pay-single?serverTimezone=Asia/Shanghai&autoReconnect=true&reWriteBatchedInserts=true
+#          username: bootx
 #          password: bootx123
+          # MySQL连接
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/dax-pay-single?serverTimezone=GMT%2B8&characterEncoding=utf8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
+          username: root
+          password: ewell@123
       hikari:
         keepalive-time: 300000
   data:
     redis:
-      host: redis
+      host: 192.168.190.49
       port: 6379
       database: 5
-      password: bootx123
+      password: XCwjj@xcewell123
       lettuce:
         pool:
           max-wait: 1000ms
