--- a/daxpay-single-server/src/main/resources/application.yml
+++ b/daxpay-single-server/src/main/resources/application.yml
@@ -136,3 +136,28 @@ dromara:
         end-point: http://127.0.0.1:9002  # minio访问地址
         bucket-name: daxpay # 存储桶名称
         base-path: /file/ # 基础存储路径 前缀和结尾都必须为 /
+app:
+  description: This is a Spring Boot application
+  servers:
+    - st0001@180@380
+    - st0002@150@310
+    - st0003@128@250
+    - st0004@128@250
+    - st0005@145@300
+    - st0006@120@270
+
+#//2025年1月分开始改。要求：在去年的2000万左右的营额上递增20-30%的营业额，达到2400万—2600万的样子。（没有开新店的规模）如果有新店的话再增加营业额。分到每家店的营业额大致是：
+#//            1、解百湖滨店全年营业额520万，
+#//            2、国贸金融店全年营业额460万左右，
+#               3、云栖店全年营业额380万左右
+#//            4、莲荷里店全年营业额380万左右；
+#//            ，5、义乌环球店480万左右，
+#//            6、义乌北苑店全年营业额360万左右，
+#//
+#//    这样全年六家店在2600万的样子。
+#  ST0001("st0001", "杭州解百湖滨店",LocalDate.of(2024,4,28)),
+#  ST0002("st0002", "杭州国贸金融店",LocalDate.of(2025,1,3)),
+#  ST0003("st0003", "杭州云栖鹏辉店",LocalDate.of(2024,2,23)),
+#  ST0004("st0004", "杭州滨江莲荷里店",LocalDate.of(2024,6,4)),
+#  ST0005("st0005", "义乌环球大厦店",LocalDate.of(2024,2,23)),
+#  ST0006("st0006", "义乌北苑加油站店",LocalDate.of(2024,1,24));
